logs/factor_momentum_8263422.err
  File "/home/boobus/projects/factor_momentum/backtest.py", line 30
    gamma=2
          ^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
